# coverage_control_uavs

./: README.md
coverage_control_uavs/bash_scripts/: environment_start.sh  multi_agent_start.sh  rviz_visualization.sh  start_mission.sh
coverage_control_uavs/control_uav/: CMakeLists.txt  package.xml
coverage_control_uavs/control_uav/scripts/: PID.py  VelocityController.py  compute_coverage.py  config for HRVO.json  config.json  control_script.py  control_uav.py  global_planning.py  global_planning_function.py  globalplanning.py.old  load_estimation_structure.py  load_parameter.py  local_planning.py  run_control_uav.sh  rviz_visualization.py  saved_config.json  try_markers.py
coverage_control_uavs/gazebo_tests/: CMakeLists.txt  README.md  package.xml
coverage_control_uavs/gazebo_tests/cfg/: ModelSpawn.cfg
coverage_control_uavs/gazebo_tests/launch/: empty_gazebo.launch
coverage_control_uavs/gazebo_tests/scripts/: cube_template.py  loop_parameter_example.py  ramp_template.py  spawn_by_params.py  test_spawn.py
coverage_control_uavs/multi_uav/: CMakeLists.txt  package.xml
coverage_control_uavs/multi_uav/launch/: multi_agent_obstacle_avoidance.launch
coverage_control_uavs/multi_uav/scripts/: control_one_agent.py  run_hector_slam_multi_agent.sh
coverage_control_uavs/pygazebo/: CMakeLists.txt  package.xml
coverage_control_uavs/pygazebo/scripts/: hellogazebo.py  pygazebo.py
coverage_control_uavs/pygazebo/scripts/msg/: link_pb2.py  model_pb2.py  physics_pb2.py  visual_pb2.py
