<?xml version="1.0"?>
<package>
  <name>gazebo_tests</name>
  <version>0.0.0</version>
  <description>The gazebo_tests package</description>

  <maintainer email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>